[package]
name = "plato-jepa"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "JEPA primitives for tile representation learning in PLATO rooms"
repository = "https://github.com/SuperInstance/plato-jepa"


[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
